# amplifier-session-insights

./: README.md
docs/: README.md
docs/01-vision/: 01-VISION.md  02-PRINCIPLES.md  03-SUCCESS-METRICS.md
docs/02-requirements/epics/: 01-session-insights.md
docs/02-requirements/user-stories/01-session-insights/: 01-01-session-summary.md  01-02-self-evaluation.md  01-03-data-collection.md  01-05-privacy-controls.md
docs/07-templates/: FEEDBACK_TEMPLATE.md  HERO_SCENARIO_TEMPLATE.md  MAINTENANCE_TEMPLATE.md  TEAM_TEMPLATE.md
modules/hooks-session-learning/: README.md  pyproject.toml
modules/hooks-session-learning/amplifier_module_hooks_session_learning/: __init__.py
modules/tool-session-insights/: pyproject.toml
modules/tool-session-insights/amplifier_module_tool_session_insights/: __init__.py  __main__.py
