[project]
name = "amplifier-module-hooks-session-learning"
version = "0.1.0"
description = "Session analysis and learning insights generation"
readme = "README.md"
requires-python = ">=3.11"
# No dependencies - amplifier-core is available at runtime via the host environment
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-session-learning = "amplifier_module_hooks_session_learning:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_session_learning"]
