[project]
name = "amplifier-module-tool-session-insights"
version = "0.1.0"
description = "On-demand session analysis tool for Amplifier"
requires-python = ">=3.11"

[project.entry-points."amplifier.modules"]
tool-session-insights = "amplifier_module_tool_session_insights:mount"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
